assets/css/style.css
/* ... */
.xsmall-title-oswald {
	text-transform: uppercase;
	font-size: 12px;
	line-height: 1.4;
	font-weight: 600;
	letter-spacing: 1px;
	font-family: 'Oswald', sans-serif;
}

.medium-title {
	text-transform: uppercase;
	font-size: 45px;
	line-height: 1.13;
	font-weight: 500;
	letter-spacing: 3px;
	font-family: 'Oswald', sans-serif;
}

.large-title {
	text-transform: uppercase;
	font-size: 65px;
	line-height: 1;
	font-weight: 600;
	letter-spacing: -2px;
	font-family: 'Oswald', sans-serif;
}

.large-title-bold {
	text-transform: uppercase;
	font-size: 65px;
	line-height: 1;
	font-weight: 700;
	letter-spacing: -2px;
	font-family: 'Oswald', sans-serif;
}

.xlarge-title {
	text-transform: uppercase;
	font-size: 75px;
	line-height: 1;
	font-weight: 700;
	letter-spacing: -2px;
	font-family: 'Oswald', sans-serif;
}

.xxlarge-title {
	text-transform: uppercase;
	font-size: 100px;
	line-height: 1;
	font-weight: 700;
	letter-spacing: -2px;
	font-family: 'Oswald', sans-serif;
}

.p-style-xsmall {
	font-size: 13px;
	line-height: 2.35;
	font-weight: 300;
	letter-spacing: 0px;
	font-family: 'Open Sans', sans-serif;
}

.p-style-small {
	font-size: 14px;
	line-height: 2.15;
	font-weight: 400;
	letter-spacing: 1px;
	font-family: 'Open Sans', sans-serif;
}

.p-style-medium {
	font-size: 16px;
	line-height: 1.8;
	font-weight: 600;
	letter-spacing: 0px;
	font-family: 'Open Sans', sans-serif;
}

.p-style-large {
	font-size: 18px;
	line-height: 1.8;
	font-weight: 400;
	letter-spacing: 0px;
	font-family: 'Open Sans', sans-serif;
}

.p-style-bold {
	font-size: 20px;
	line-height: 1.6;
	font-weight: 600;
	letter-spacing: 1px;
	font-family: 'Oswald', sans-serif;
}

.p-style-bold-up {
	text-transform: uppercase;
	font-size: 14px;
	line-height: 1.5;
	font-weight: 700;
	letter-spacing: 1px;
	font-family: 'Open Sans', sans-serif;
}

.p-letter-style {
	text-transform: uppercase;
	font-size: 10px;
	line-height: 1;
	font-weight: 400;
	letter-spacing: 5px;
	font-family: 'Oswald', sans-serif;
}

@media only screen and (max-width: 1199px) {
	
	.title-style {
		font-size: 28px;
	}
	
	.medium-title {
		font-size: 38px;
	}
	
	.large-title,
	.large-title-bold {
		font-size: 55px;
	}
	
	.xlarge-title {
		font-size: 65px;
	}
	
	.xxlarge-title {
		font-size: 85px;
	}
	
}

@media only screen and (max-width: 999px) {
	
	.title-style {
		font-size: 26px; 
	}
	
	.medium-title {
		font-size: 35px;
	}
	
	.large-title,
	.large-title-bold {
		font-size: 50px;
	}
	
	.xlarge-title {
		font-size: 55px;
	}
	
	.xxlarge-title {
		font-size: 70px;
	}
	
	.p-style-bold {
		font-size: 18px;
	}
	
	.p-style-bold-up {
		font-size: 13px;
	}
    
}

@media only screen and (max-width: 767px) {
	
	.title-style {
		font-size: 25px;
	}
	
	.small-title-oswald {
		font-size: 13px;
	}
	
	.xsmall-title-oswald {
		font-size: 11px;
	}
	
	.medium-title {
		font-size: 30px;
	}

   	.large-title,
   	.large-title-bold {
		font-size: 40px;
	}
	
	.xlarge-title {
		font-size: 45px;
	}
	
	.xxlarge-title {
		font-size: 50px;
	}
	
	.p-style-large {
		font-size: 16px;
	}
	
	.p-style-medium {
		font-size: 15px;
	}
	
	.p-style-bold {
		font-size: 16px;
	}
	
	.p-style-bold-up {
		font-size: 12px;
	}
    
}

@media only screen and (max-width: 549px) {
	
	.title-style {
		font-size: 23px;
	}
	
	.small-title-oswald {
		font-size: 12px;
	}
	
	.xsmall-title-oswald {
		font-size: 10px;
	}
	
	.medium-title {
		font-size: 25px;
	}

   	.large-title,
   	.large-title-bold {
		font-size: 35px;
	}
	
	.xlarge-title {
		font-size: 38px;
	}
	
	.xxlarge-title {
		font-size: 42px;
	}
	
	.p-style-medium {
		font-size: 14px;
	}
	
	.p-style-large {
		font-size: 15px;
	}
	
	.p-style-bold {
		font-size: 14px;
	}
   	 
}

/*--------------------------------------------------------------
8. Buttons
--------------------------------------------------------------*/

/* 8.1. To top button */
.to-top-btn {
  	position: fixed;
  	bottom: 40px;
  	right: 40px;
  	overflow: hidden;
  	width: 40px;
  	height: 40px;
  	z-index: 9;
  	-webkit-transition-property: visibility;
  		-o-transition-property: visibility;
  			transition-property: visibility;
	-webkit-transition-duration: 0s;
	    -o-transition-duration: 0s;
	        transition-duration: 0s;
  	-webkit-transition-delay: 0s;
  	    -o-transition-delay: 0s;
  	        transition-delay: 0s;
}

.to-top-btn.mPS2id-highlight {
	visibility: hidden;
	-webkit-transition-property: visibility;
		-o-transition-property: visibility;
			transition-property: visibility;
	-webkit-transition-duration: 0s;
	    -o-transition-duration: 0s;
	        transition-duration: 0s;
	-webkit-transition-delay: .9s;
	    -o-transition-delay: .9s;
	        transition-delay: .9s;
}

.to-top-btn:before {
  	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: #111517;
	-webkit-transform: translateY(0);
	    -ms-transform: translateY(0);
	        transform: translateY(0);
	-webkit-transition: .6s cubic-bezier(.858, .01, .068, .99);
		-o-transition: .6s cubic-bezier(.858, .01, .068, .99);
			transition: .6s cubic-bezier(.858, .01, .068, .99);
}

.to-top-btn.mPS2id-highlight:before {
	-webkit-transform: translateY(100%);
	    -ms-transform: translateY(100%);
	        transform: translateY(100%);
}

.to-top-arrow {
	width: 10px;
	height: 25px;
	position: absolute;
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -15%);
	    -ms-transform: translate(-50%, -15%);
	        transform: translate(-50%, -15%);
	-webkit-transition: .6s cubic-bezier(.858, .01, .068, .99);
		-o-transition: .6s cubic-bezier(.858, .01, .068, .99);
			transition: .6s cubic-bezier(.858, .01, .068, .99);
}

.to-top-btn.mPS2id-highlight .to-top-arrow,
.to-top-btn.mPS2id-highlight:hover .to-top-arrow {
	-webkit-transform: translate(-50%, -180%);
	    -ms-transform: translate(-50%, -180%);
	        transform: translate(-50%, -180%);
}
/* ... */

